--- a/.gitignore
+++ b/.gitignore
@@ -126,4 +126,5 @@ modules/data/images/thisisfine.gif
 *.xls
 updateSlashCommand.py
 *.botti
-modules/data/calendar/cal.ical
+modules/data/calendar/*
+modules/data/klausuren/*
